# loramon

./: .env.example  .gitignore  README.md  compose.yml  setup_semantica.sh  t
api/: Dockerfile  README.md  pyproject.toml
api/app/: database.py  deps.py  main.py  models.py  schemas.py  security.py  utils.py
api/app/routes/: auth.py  catalog.py  devices.py  floorplans.py  metrics.py  placements.py  sensors.py  sites.py  sql.py  thresholds.py  timeseries.py
api/app/services/: alerts.py  pdf_render.py  timeseries.py
api/tests/: test_auth_sites.py  test_metrics_catalog.py
db/migrations/: 001_init.sql  002_metric_map_device_profile_enabled.sql
etl/: Dockerfile  README.md  etl.py  test_parse_payload.py
nginx/: nginx.conf
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/public/: README.md
web/src/app/: layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/web/: package-lock.json
web/src/app/explorer/: page.tsx
web/src/app/floorplans/editor/: page.tsx
web/src/app/floorplans/upload/: page.tsx
web/src/app/floorplans/viewer/: page.tsx
web/src/app/login/: page.tsx
web/src/app/tools/sql/: page.tsx
web/src/components/: AlertsPanel.tsx  FloorCanvas.tsx  HistoryOverlay.tsx  ReactEChart.tsx  SensorIcon.tsx  SensorPalette.tsx
web/src/lib/: api.ts  echarts.ts
